--- a/pages/contact.html
+++ b/pages/contact.html
@@ -87,10 +87,10 @@
     <footer>
         <div>
             <a href="fb" class="red">
-                <i style="color: blue;" id="fb"></i>
+                <i style="color :#f5f4f5" id="fb"></i>
             </a>
             <a href="ig" class="red">
-                <i style="color:#fd2ddc;" id="ig"></i>
+                <i style="color:#f5f4f5;" id="ig"></i>
             </a>
         </div>
         <p>Copyright Buenos Aires, Argentina 2022</p>
