--- a/pages/bibliografia.html
+++ b/pages/bibliografia.html
@@ -29,16 +29,16 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="tipos.html">Tipos</a>
+                    <a href="./tipos.html">Tipos</a>
                 </li>
                 <li>
-                    <a href="bibliografia.html">Bibliografia</a>
+                    <a href="./bibliografia.html">Bibliografia</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contacto</a>
+                    <a href="./contact.html">Contacto</a>
                 </li>
                 <li>
-                    <a href="produccion.html">Produccion</a>
+                    <a href="./produccion.html">Produccion</a>
                 </li>
             </ul>
         </nav>
