Subida Imagenes Index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <article class="caja">
             <article class="marc">
-                <img src="" alt="Foto cerveza" width="100%" height="auto">
+                <img src="./img/cerveceria-1516.jpg" alt="Foto cerveza" width="100%" height="auto">
                 <div class="content">
                     <h2>BierPedia</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos reiciendis iure doloribus,
@@ -61,7 +61,7 @@
             </article>
 
             <article class="marc">
-                <img src="" alt="Foto creveza" width="100%" height="auto">
+                <img src="./img/cervecerias-growlers.jpg" alt="Foto creveza" width="100%" height="auto">
                 <div class="content">
                     <h2>BierPedia</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis similique beatae! Iure commodi
