Agregado pagina evento e iframe

--- a/pages/bibliografia.html
+++ b/pages/bibliografia.html
@@ -40,6 +40,10 @@
                 <li>
                     <a href="./produccion.html">Produccion</a>
                 </li>
+                <li>
+                    <a href="./evento.html">Eventos</a>
+                </li>
+
             </ul>
         </nav>
     </header>
