--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,6 +40,9 @@
                 <li>
                     <a href="produccion.html">Produccion</a>
                 </li>
+                <li>
+                    <a href="evento.html">Eventos</a>
+                </li>
             </ul>
         </nav>
     </header>
