--- a/pages/evento.html
+++ b/pages/evento.html
@@ -5,44 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="icon" type="image/png" href="img/bierpedia.png" sizes="16x16">
+    <link rel="stylesheet" href="../src/style.css">
+    <link rel="icon" type="image/png" href="../img/bierpedia.png" sizes="16x16">
     <script src="https://kit.fontawesome.com/e8a0c1f706.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
     <title>BierPedia</title>
 </head>
 
 <body>
     <header>
         <span id="merch">
-            <img src="img/bierpedia.png" alt="logo" id="logo" width="50px" height="50px">
-            <h1>BierPedia</h1>
+            <img src="../img/bierpedia.png" alt="logo" id="logo" width="50px" height="50px">
+            <h1 class="h1">BierPedia</h1>
         </span>
 
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="pages/tipos.html">Tipos</a>
+                    <a href="tipos.html">Tipos</a>
                 </li>
                 <li>
-                    <a href="pages/bibliografia.html">Bibliografia</a>
+                    <a href="bibliografia.html">Bibliografia</a>
                 </li>
                 <li>
-                    <a href="pages/contact.html">Contacto</a>
+                    <a href="contact.html">Contacto</a>
                 </li>
                 <li>
-                    <a href="pages/produccion.html">Produccion</a>
+                    <a href="produccion.html">Produccion</a>
                 </li>
                 <li>
-                    <a href="pages/evento.html">Eventos</a>
+                    <a href="evento.html">Eventos</a>
                 </li>
             </ul>
         </nav>
@@ -50,32 +49,37 @@
 
 
 
+
+
+
     <main>
+
         <article class="caja">
             <article class="marc">
-                <img src="./img/cerveceria-1516.jpg" alt="Foto cerveza" width="100%" height="auto">
+                <img src="../img/cervecerias-growlers.jpg" alt="Foto creveza" width="100%" height="auto">
                 <div class="content">
-                    <h2>BierPedia</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos reiciendis iure doloribus,
-                        autem veniam fugit eligendi laborum voluptate maxime ea quod quisquam, dolor ratione, natus
-                        quidem atque. Enim, maxime facilis!</p>
-                </div>
-
-            </article>
-
-            <article class="marc">
-                <img src="./img/cervecerias-growlers.jpg" alt="Foto creveza" width="100%" height="auto">
-                <div class="content">
-                    <h2>BierPedia</h2>
+                    <h2>Evento</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis similique beatae! Iure commodi
                         eos autem suscipit doloribus? Totam non eos quis ea quasi et rem accusamus! Expedita, quod
                         dolore!</p>
+                </div>
+                <div class="mapouter">
+                    <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
+                            marginwidth="0"
+                            src="https://maps.google.com/maps?width=517&amp;height=147&amp;hl=en&amp;q=growlers palermo&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                            href="https://piratebay-proxys.com/">Pirate proxy</a></div>
                 </div>
 
 
             </article>
         </article>
+
+
+
+
     </main>
+
+
 
 
 
@@ -83,19 +87,16 @@
     <footer>
         <div>
             <a href="fb" class="red">
-                <i style="color:#f5f4f5;" id="fb"></i>
-
+                <i style="color: #f5f4f5;" id="fb"></i>
             </a>
             <a href="ig" class="red">
                 <i style="color:#f5f4f5;" id="ig"></i>
-
             </a>
         </div>
         <p>Copyright Buenos Aires, Argentina 2022</p>
     </footer>
 
-
-    <script src="src/script.js"></script>
+    <script src="../src/script.js"></script>
 </body>
 
 </html>
