modifiuqe texto en pagina con branch jose

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
                 <img src="./img/cerveceria-1516.jpg" alt="Foto cerveza" width="100%" height="auto">
                 <div class="content">
                     <h2>BierPedia</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos reiciendis iure doloribus,
-                        autem veniam fugit eligendi laborum voluptate maxime ea quod quisquam, dolor ratione, natus
-                        quidem atque. Enim, maxime facilis!</p>
+                    <p>La cerveza artesanal es un tipo de cerveza sin aditivos ni conservantes y sin pasteurizar. 
+                       Es un producto evolutivo que cambia cada día un poco, con presencia de levadura viva 
+                       (visible o no).
+                       Se produce mediante un proceso natural a partir del grano de malta sin utilizar extractos 
+                       ni productos diferentes del agua, levadura, lúpulo y el cereal para hacer la malta.</p>
                 </div>
 
             </article>
@@ -67,9 +69,15 @@
                 <img src="./img/cervecerias-growlers.jpg" alt="Foto creveza" width="100%" height="auto">
                 <div class="content">
                     <h2>BierPedia</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis similique beatae! Iure commodi
-                        eos autem suscipit doloribus? Totam non eos quis ea quasi et rem accusamus! Expedita, quod
-                        dolore!</p>
+                    <p>El sistema de elaboración de la cerveza artesanal consta de cinco etapas básicas: maceración,
+                       cocción, enfriamiento, fermentación (la primera en un fermentador y la segunda en la misma 
+                       botella) y envasado. 
+                       El proceso de elaboración tiene que ser un proceso "todo grano" que parte del grano (malteado
+                       o no). No se permite ningun tipo de extracto (ni de maltas ni de lúpulos) para la obtención 
+                       del mosto de la cerveza. Tampoco se permite el uso de aditivos ni coadyuvantes tecnológicos 
+                       sintéticos (antioxidantes, conservantes, colorantes, estabilizantes, etc).
+                       En algunas variedades, la composición puede incluir otras materias primas naturales para 
+                       aromatizarlas como azúcares, especias y frutas.</p>
                 </div>
 
 
