--- a/pages/evento.html
+++ b/pages/evento.html
@@ -59,9 +59,16 @@
                 <img src="../img/cervecerias-growlers.jpg" alt="Foto creveza" width="100%" height="auto">
                 <div class="content">
                     <h2>Evento</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis similique beatae! Iure commodi
-                        eos autem suscipit doloribus? Totam non eos quis ea quasi et rem accusamus! Expedita, quod
-                        dolore!</p>
+                    <p>La Cámara de Cerveceros Artesanales de Argentina (CCAA) celebrará la primera edición del Festival 
+                       internacional de la cerveza artesanal el próximo 16, 17 y 18 noviembre en Growlers Palermo, Ciudad 
+                       de Buenos Aires.
+                       
+                       Durante el festival se realizará la primera copa cervecera internacional organizada por la CCAA 
+                       con la participación de jurados y muestras de todo el mundo.
+
+                       Además, contará con el primer congreso internacional integral de ciencia y producción cervecera, 
+                       contenidos inéditos, una gran feria de proveedores de la industria, rondas de negocios y nuevas 
+                       oportunidades que marcan tendencia.</p>
                 </div>
                 <div class="mapouter">
                     <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
