Primer commit de jose

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="content">
                     <h2>BierPedia</h2>
                     <p>La cerveza artesanal es un tipo de cerveza sin aditivos ni conservantes y sin pasteurizar. 
-                       Es un producto evolutivo que cambia cada día un poco, con presencia de levadura viva 
-                       (visible o no).
+                       Es un producto evolutivo que cambia cada día un poco, con presencia de levadura viva, 
+                       esta puede estar visible o no.
                        Se produce mediante un proceso natural a partir del grano de malta sin utilizar extractos 
                        ni productos diferentes del agua, levadura, lúpulo y el cereal para hacer la malta.</p>
                 </div>
@@ -70,8 +70,8 @@
                 <div class="content">
                     <h2>BierPedia</h2>
                     <p>El sistema de elaboración de la cerveza artesanal consta de cinco etapas básicas: maceración,
-                       cocción, enfriamiento, fermentación (la primera en un fermentador y la segunda en la misma 
-                       botella) y envasado. 
+                       cocción, enfriamiento, fermentación (la primera se realiza en un fermentador y la segunda en la
+                       misma botella) y envasado. 
                        El proceso de elaboración tiene que ser un proceso "todo grano" que parte del grano (malteado
                        o no). No se permite ningun tipo de extracto (ni de maltas ni de lúpulos) para la obtención 
                        del mosto de la cerveza. Tampoco se permite el uso de aditivos ni coadyuvantes tecnológicos 
