--- a/pages/evento.html
+++ b/pages/evento.html
@@ -60,7 +60,7 @@
                 <div class="content">
                     <h2>Evento</h2>
                     <p>La Cámara de Cerveceros Artesanales de Argentina (CCAA) celebrará la primera edición del Festival 
-                       internacional de la cerveza artesanal el próximo 16, 17 y 18 noviembre en Growlers Palermo, Ciudad 
+                       internacional de la cerveza artesanal el próximo 23, 24 y 25 de noviembre en Growlers Palermo, Ciudad 
                        de Buenos Aires.
                        
                        Durante el festival se realizará la primera copa cervecera internacional organizada por la CCAA 
