Primer commit de jose

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="content">
                     <h2>BierPedia</h2>
                     <p>El sistema de elaboración de la cerveza artesanal consta de cinco etapas básicas: maceración,
-                       cocción, enfriamiento, fermentación (la primera se realiza en un fermentador y la segunda en la
+                       cocción, enfriamiento, fermentación (la primera se hace en un fermentador y la segunda en la
                        misma botella) y envasado. 
                        El proceso de elaboración tiene que ser un proceso "todo grano" que parte del grano (malteado
                        o no). No se permite ningun tipo de extracto (ni de maltas ni de lúpulos) para la obtención 
